// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders <Checkbox /> without crashing 1`] = `
<label
  class="o-form__toggle o-form__toggle--checkbox"
>
  <input
    checked=""
    class="o-form__toggle-input u-is-visually-hidden"
    name="name"
    type="checkbox"
    value="value"
  />
  <span
    class="o-form__toggle-icon"
  />
  <span
    class="o-form__toggle-text"
  >
    children
  </span>
</label>
`;

exports[`Renders <Radio /> without crashing 1`] = `
<label
  class="o-form__toggle o-form__toggle--radio"
>
  <input
    checked=""
    class="o-form__toggle-input u-is-visually-hidden"
    name="name"
    type="radio"
    value="value"
  />
  <span
    class="o-form__toggle-icon"
  />
  <span
    class="o-form__toggle-text"
  >
    children
  </span>
</label>
`;
